--- a/Ethereal_V0.vcxproj
+++ b/Ethereal_V0.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="Ente.h" />
     <ClInclude Include="Fase.h" />
     <ClInclude Include="Jogo.h" />
+    <ClInclude Include="Lista.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuFases.h" />
     <ClInclude Include="MenuOptions.h" />
