--- a/Ethereal_V0.vcxproj
+++ b/Ethereal_V0.vcxproj
@@ -104,12 +104,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML\include;$(SolutionDir)\SFML\include;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML-2.6.0\include;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML\lib;$(SolutionDir)\SFML\lib;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML-2.6.0\lib;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-network-d.lib;sfml-system-d.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -121,14 +121,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML\include;$(SolutionDir)\SFML\include;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\include;C:\UTFPR\2ºPeríodo\TecProg\Projeto_Final\Pasta_Jogo\Código\SFML-2.6.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML-2.6.0\include;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\include;C:\UTFPR\2ºPeríodo\TecProg\Projeto_Final\Pasta_Jogo\Código\SFML-2.6.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML\lib;$(SolutionDir)\SFML\lib;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\lib;C:\UTFPR\2ºPeríodo\TecProg\Projeto_Final\Pasta_Jogo\Código\SFML-2.6.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\miche_bb3fmdp\OneDrive\Documentos\GitHub\Ethereal\SFML-2.6.0\lib;C:\Users\gabri\source\repos\GabrielleSchultz\Ethereal\SFML-2.6.0\lib;C:\UTFPR\2ºPeríodo\TecProg\Projeto_Final\Pasta_Jogo\Código\SFML-2.6.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-audio.lib;sfml-network.lib;sfml-system.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -160,7 +160,10 @@
     <ClCompile Include="Personagem.cpp" />
     <ClCompile Include="Primeira_Fase.cpp" />
     <ClCompile Include="Projetil.cpp" />
+    <ClCompile Include="Raiva.cpp" />
     <ClCompile Include="Segunda_Fase.cpp" />
+    <ClCompile Include="Tristeza.cpp" />
+    <ClCompile Include="Vinganca.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
@@ -193,8 +196,11 @@
     <ClInclude Include="Personagem.h" />
     <ClInclude Include="Primeira_Fase.h" />
     <ClInclude Include="Projetil.h" />
+    <ClInclude Include="Raiva.h" />
     <ClInclude Include="Segunda_Fase.h" />
+    <ClInclude Include="Tristeza.h" />
     <ClInclude Include="Vector2D.h" />
+    <ClInclude Include="Vinganca.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
