colisão com projeteis

--- a/Ethereal_V0.vcxproj.filters
+++ b/Ethereal_V0.vcxproj.filters
@@ -144,9 +144,6 @@
     <ClCompile Include="ControleMenu.cpp">
       <Filter>Arquivos de Origem\Controles</Filter>
     </ClCompile>
-    <ClCompile Include="ListaEntidades.cpp">
-      <Filter>Arquivos de Origem\Listas</Filter>
-    </ClCompile>
     <ClCompile Include="Espinhos.cpp">
       <Filter>Arquivos de Origem\Entidades\Obstaculos</Filter>
     </ClCompile>
@@ -167,6 +164,9 @@
     </ClCompile>
     <ClCompile Include="Entidade_Dinamica.cpp">
       <Filter>Arquivos de Origem\Entidades</Filter>
+    </ClCompile>
+    <ClCompile Include="ListaEntidades.cpp">
+      <Filter>Arquivos de Origem\Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
