--- a/Ethereal_V0.vcxproj
+++ b/Ethereal_V0.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Projetil.cpp" />
     <ClCompile Include="Raiva.cpp" />
     <ClCompile Include="Segunda_Fase.cpp" />
+    <ClCompile Include="Selecao.cpp" />
     <ClCompile Include="Tristeza.cpp" />
     <ClCompile Include="Vinganca.cpp" />
   </ItemGroup>
@@ -204,6 +205,7 @@
     <ClInclude Include="Projetil.h" />
     <ClInclude Include="Raiva.h" />
     <ClInclude Include="Segunda_Fase.h" />
+    <ClInclude Include="Selecao.h" />
     <ClInclude Include="Tristeza.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Vinganca.h" />
