--- a/Ethereal_V0.vcxproj
+++ b/Ethereal_V0.vcxproj
@@ -133,6 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Botao.cpp" />
     <ClCompile Include="ControleJogador.cpp" />
     <ClCompile Include="ControleMenu.cpp" />
     <ClCompile Include="Entidade_Dinamica.cpp" />
@@ -170,6 +171,7 @@
     <ClCompile Include="Vinganca.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Botao.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="ControleJogador.h" />
     <ClInclude Include="ControleMenu.h" />
