--- a/Ethereal_V0.vcxproj
+++ b/Ethereal_V0.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="Texto.cpp" />
     <ClCompile Include="Tristeza.cpp" />
     <ClCompile Include="Vinganca.cpp" />
+    <ClCompile Include="Vinganca_Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Botao.h" />
@@ -213,6 +214,7 @@
     <ClInclude Include="Tristeza.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Vinganca.h" />
+    <ClInclude Include="Vinganca_Thread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
